Fixed Cell Sequence

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b5258895-e1d5-4d09-9590-1486e7b8fa64",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "4       1990-05-01         4.1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d3bf60e6-ee76-4bbb-bdca-6fbdff7a9962",
    "metadata": {},
    "outputs": [
@@ -99,18 +99,21 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 424 entries, 0 to 423\n",
       "Data columns (total 4 columns):\n",
-      " #   Column             Non-Null Count  Dtype         \n",
-      "---  ------             --------------  -----         \n",
-      " 0   date               424 non-null    datetime64[ns]\n",
-      " 1   unemployment_rate  424 non-null    float64       \n",
-      " 2   year               424 non-null    int32         \n",
-      " 3   month              424 non-null    int32         \n",
-      "dtypes: datetime64[ns](1), float64(1), int32(2)\n",
-      "memory usage: 10.1 KB\n"
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   observation_date  424 non-null    object \n",
+      " 1   SAND706URN        424 non-null    float64\n",
+      " 2   year              424 non-null    int32  \n",
+      " 3   month             424 non-null    int32  \n",
+      "dtypes: float64(1), int32(2), object(1)\n",
+      "memory usage: 10.1+ KB\n"
      ]
     }
    ],
    "source": [
+    "# track year and month seperately\n",
+    "df[\"year\"] = pd.DatetimeIndex(df[\"observation_date\"]).year\n",
+    "df[\"month\"] = pd.DatetimeIndex(df[\"observation_date\"]).month\n",
     "\n",
     "#see info summary\n",
     "df.info()"
@@ -118,7 +121,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "id": "5f52ba4b-d0a0-472e-b92b-0155526c6a20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date                 0\n",
+      "unemployment_rate    0\n",
+      "year                 0\n",
+      "month                0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#rename date and unemployment rate\n",
+    "df.rename(columns={\"observation_date\": \"date\", \"SAND706URN\": \"unemployment_rate\"}, inplace=True)\n",
+    "\n",
+    "#turn date to datetime\n",
+    "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "\n",
+    "# Check for missing values\n",
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "039f30cc-d4eb-4448-acbc-8a67ca97684d",
    "metadata": {},
    "outputs": [
@@ -232,41 +264,14 @@
        "std      3.463213  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#describe basic stats\n",
-    "df.describe()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5f52ba4b-d0a0-472e-b92b-0155526c6a20",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "date                 0\n",
-      "unemployment_rate    0\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "#rename date and unemployment rate\n",
-    "df.rename(columns={\"observation_date\": \"date\", \"SAND706URN\": \"unemployment_rate\"}, inplace=True)\n",
-    "\n",
-    "#turn date to datetime\n",
-    "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
-    "\n",
-    "# Check for missing values\n",
-    "print(df.isnull().sum())"
+    "df.describe()"
    ]
   },
   {
